# tc-orders

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml
src/application/api/: __init__.py  app.py  exception_handlers.py
src/application/api/middlewares/: __init__.py  cors_middleware.py
src/application/api/routers/: __init__.py  health_check_route.py
src/application/api/types/: __init__.py  cpf_str.py  pydantic_external_id.py
src/application/di/: __init__.py  injector.py
src/application/di/modules/: __init__.py  customer_module.py  order_module.py  product_module.py
src/application/error/: __init__.py  not_found_error.py
src/domain/: customer_error.py
src/domain/__shared/entity/: aggregate_root.py
src/domain/__shared/error/: __init__.py  domain_error.py  entity_conflict_error.py  entity_not_found_error.py  external_service_error.py  repository_error.py
src/domain/__shared/interfaces/: __init__.py  product_service.py  repository_interface.py
src/domain/__shared/validator/: __init__.py  error.py  error_details.py  error_translator.py  pydantic_validator.py  validator_interface.py
src/domain/customer/: __init__.py  entity.py  repository.py  validator.py
src/domain/order/: __init__.py  entity.py  error.py  order_item.py  order_item_validator.py  order_status.py  repository.py  validator.py
src/infra/config/: __init__.py
tests/: conftest.py
tests/__providers/: __init__.py  cpf_provider.py  unique_entity_id_provider.py
tests/domain/customer/: test_customer_entity.py
tests/domain/order/: test_order_entity.py
(+56 files in other folders)
