[tool.poetry]
name = "tc-orders"
version = "0.1.0"
description = ""
authors = ["Lucas Cristovam <lucas.henriques@dimensa.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
injector = "^0.22.0"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.1"
radon = "^6.0.1"
coverage = "^7.6.8"
pytest = "^8.3.3"
gitlint = "^0.19.1"
xenon = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
